// Author: S2401265 Ahmed Aslan Ibrahim
namespace HMS.Domain.Enums;

public enum BookingStatus
{
    Pending,
    Confirmed,
    CheckedIn,
    CheckedOut,
    Cancelled,
    NoShow
}
