// Author: S2401265 Ahmed Aslan Ibrahim
namespace HMS.Domain.Enums;

public enum PaymentMethod
{
    CreditCard,
    DebitCard,
    Cash,
    BankTransfer
}
