// Author: S2401265 Ahmed Aslan Ibrahim
namespace HMS.Domain.Enums;

public enum PaymentStatus
{
    Pending,
    Authorised,
    Captured,
    Refunded,
    Failed
}
