// Author: S2401265 Ahmed Aslan Ibrahim
namespace HMS.Domain.Enums;

public enum RoomType
{
    StandardDouble    = 0,
    DeluxeKing        = 1,
    FamilySuite       = 2,
    BeachVilla        = 3,
    WaterVilla        = 4,
    OverwaterBungalow = 5,
    HoneymoonVilla    = 6,
    PresidentialVilla = 7,
}
