// Author: S2401265 Ahmed Aslan Ibrahim
namespace HMS.Domain.Enums;

public enum UserRole
{
    Guest,
    FrontDeskStaff,
    HotelManager,
    Admin
}
